--- a/ChenCode4-kproofBackend.ipynb
+++ b/ChenCode4-kproofBackend.ipynb
@@ -8,7 +8,7 @@
     "2019\n",
     "Author: Chen Zuckerman Nelson  (nelson@physics.upenn.edu)\n",
     "\n",
-    "Python: 3.8   ChenCode4-kproofBackend.ipynb\n",
+    "Python 3.7:   ChenCode4-kproofBackend.ipynb\n",
     "\n",
     "Description: VPython animation to display the simulation results from Code 3. It reads the data files kproof_HN.npz or kproof_realistic.npz emitted by Code 3. If the flag \"povray\" is set True, then this code writes a lot of .pov files (ray-traced images of each frame). Use \"POVRay Unofficial.app\" to convert to .png. Then, use \n",
     "ffmpeg to compile .png files into movie.\n",
@@ -406,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
